начал описывать настройки